--- a/kak/public/drawing.html
+++ b/kak/public/drawing.html
@@ -1,4 +1,4 @@
-<!-- public/index.html -->
+<!-- public/drawing.html -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,14 +9,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="initialPage">
-    <h2>Welcome to the Collaborative Drawing App!</h2>
-    <p>Please register or log in to get started.</p>
-    <button id="registerPageBtn">Register</button>
-    <button id="loginPageBtn">Log In</button>
-  </div>
+  <canvas id="drawingCanvas" width="800" height="600"></canvas>
+  <button id="toggleModeBtn">Toggle Mode</button>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/drawing.js"></script>
 </body>
 </html>
